# sales-flow

./: .env.example  .gitignore  .golangci.yml  Design.md  LICENSE  Makefile  PRD.md  README.md  epic.plan.md  go.mod  go.sum  hermes-bridge.plan.md  story.plan.md  task.plan.md
.claude/: launch.json
apps/api/: Dockerfile  main.go
apps/web/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
db/migrations/: 0002_users.up.sql  0003_chat.down.sql  0003_chat.up.sql  0004_tenders.down.sql  0004_tenders.up.sql  0005_outcome_events.down.sql  0005_outcome_events.up.sql  0006_events.down.sql  0006_events.up.sql  0007_prospects.down.sql  0007_prospects.up.sql  0008_profile.down.sql  0008_profile.up.sql  0009_audit_log.up.sql  0010_playbook_draft.down.sql  0010_playbook_draft.up.sql  0011_prospect_score.down.sql  0011_prospect_score.up.sql  0012_discovery.down.sql  0012_discovery.up.sql  0013_tender_reviewed_at.down.sql  0013_tender_reviewed_at.up.sql  0014_profile_crawl_schedule.down.sql  0014_profile_crawl_schedule.up.sql  0015_playbook.down.sql  0015_playbook.up.sql  0016_report.up.sql  0017_telemetry_event.down.sql  0017_telemetry_event.up.sql  0018_nfr_indexes.down.sql  0018_nfr_indexes.up.sql  0019_ai_provider_setting.down.sql  0019_ai_provider_setting.up.sql  0020_hermes_tui_session.down.sql  0020_hermes_tui_session.up.sql  0021_profile_products_vision_mission.down.sql  0021_profile_products_vision_mission.up.sql  0022_profile_enrichment.down.sql  0022_profile_enrichment.up.sql  0023_projects_feedback.down.sql  (+26 more)
deploy/: .env.server.example  SERVER.md  docker-compose.server.yml  docker-compose.yml
deploy/hermes/: .env.example  config.yaml.example
docs/: README.md  api-reference.md  architecture.md  configuration.md  data-model.md  development.md  ep16-learning-verification.md  getting-started.md  nfr-checklist.md
internal/ai/: discovery.go  discovery_test.go  event_analysis.go  learning.go  learning_test.go  playbook.go  playbook_test.go  profile_extract.go  profile_extract_test.go  recommend.go  recommend_test.go  report.go  report_test.go  scheduler.go  scheduler_test.go  scoring.go  scoring_test.go  tender_assist.go
internal/auth/: jwt.go  (+9 more)
services/hermes-bridge/: Dockerfile  README.md  pyproject.toml
services/hermes-bridge/app/: agent_factory.py  auth.py  config.py  main.py  pdf_render.py  schemas.py
services/hermes-bridge/app/routes/: admin.py  agent_task.py  chat.py  health.py  responses.py
services/hermes-bridge/tests/: test_admin.py  test_agent_factory.py  test_agent_task.py  test_auth.py  test_capabilities.py  test_chat.py  test_chat_stream.py  test_pdf_render.py  test_reset_memory.py  test_responses.py
(+376 files in other folders)
