[project]
name = "hermes-bridge"
version = "0.1.0"
description = "FastAPI bridge yang membungkus Hermes Agent (AIAgent) dan mengekspos HTTP /v1 OpenAI-compatible untuk backend Go SalesPilot."
requires-python = ">=3.11"
dependencies = [
    # Pin ke tag eksak — jangan ubah tanpa menjalankan contract test
    # (lihat README §Upgrading Hermes). Tag baru = ganti nilai di bawah,
    # rebuild bridge, jalankan: go test -tags contract ./internal/hermes/...
    "hermes-agent @ git+https://github.com/NousResearch/hermes-agent.git@v2026.6.19",

    # Web framework & server — pin eksak agar build reproducible.
    "fastapi==0.138.0",
    "uvicorn[standard]==0.49.0",

    # Pydantic v2 — dipakai untuk schema request/response.
    "pydantic==2.11.7",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "httpx==0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
