[project]
name = "hermes-bridge"
version = "0.1.0"
description = "FastAPI bridge yang membungkus Hermes Agent (AIAgent) dan mengekspos HTTP /v1 OpenAI-compatible untuk backend Go SalesPilot."
requires-python = ">=3.11"
dependencies = [
    # Pin ke tag eksak — jangan ubah tanpa menjalankan contract test
    # (lihat README §Upgrading Hermes). Tag baru = ganti nilai di bawah,
    # rebuild bridge, jalankan: go test -tags contract ./internal/hermes/...
    "hermes-agent @ git+https://github.com/NousResearch/hermes-agent.git@v2026.6.19",

    # Web framework & server — pin eksak agar build reproducible.
    "fastapi==0.138.0",
    "uvicorn[standard]==0.49.0",

    # Pydantic v2 — dipakai untuk schema request/response.
    # Harus match versi yang dituntut hermes-agent (transitive, exact-pinned
    # olehnya) — cek tiap kali tag hermes-agent di atas naik, kalau tidak
    # `pip install` gagal dengan ResolutionImpossible.
    "pydantic==2.13.4",

    # Renders PDF pages to images for vision-based document extraction (EP-13
    # PDF ingest) — lets the LLM read the actual PDF (tables, layout) instead
    # of Go-side text extraction, which mangles table structure. Pure-wheel,
    # no system poppler/etc. dependency needed.
    "pypdfium2==5.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "httpx==0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
